--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,14 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "adhd-helper",
+	"name": "ADHD Helper",
+	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
+	"description": "A plugin that should help me to make my live easier.",
+	"author": "Iceandstormn",
 	"authorUrl": "https://obsidian.md",
 	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"isDesktopOnly": false,
+	"main": "main.js",
+	"files": ["assets"],
+	"styles": ["styles.css"]
 }
