--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
 	"id": "adhd-helper",
 	"name": "ADHD Helper",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "A plugin that should help me to make my live easier.",
 	"author": "Iceandstormn",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"authorUrl": "",
+	"fundingUrl": "",
 	"isDesktopOnly": false,
 	"main": "main.js",
 	"files": ["assets"],
